Major update and public release

--- a/example.env
+++ b/example.env
@@ -2,9 +2,17 @@
 DISCORD_CLIENT_ID=...
 DISCORD_PUBLIC_KEY=...
 DISCORD_CLIENT_SECRET=...
+
 # Optional variables:
 # If you want to use test the Database or use it outside of a micro, set this one as well:
 DETA_PROJECT_KEY=...
+
 # While developing and making sure things work, I recommend using guild commands instead of global commands
 # This environment variable is NOT used directly by the library, but you may pass it yourself when syncing commands or just hardcode it
 GUILDS=...
+
+
+# BOT SPECIFIC SETTINGS
+NOTES_SETTINGS=3  # 1 = allow reading, 2 = allow setting
+TAGS_SETTINGS=7  # 1 = allow reading, 2 = allow setting, 4 = include defaults on setup
+SCRIPTS_SETTINGS=0  # 1 = allow using, 2 = allow setting // Not implemented yet
